--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ololade
-logo: assets/images/profile_pic.png
+logo: assests/images/profile_pic.PNG
 show_downloads: True
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
